# bot

./: .env.example  .gitignore  .replit  Azkar.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  active_groups.json  l.py  levels.py  main.py  pyproject.toml  requirements.txt
.kiro/specs/telegram-azkar-bot-refactor/: design.md  requirements.md  tasks.md
attached_assets/: Pasted---1755014653892_1755014653892.txt  Pasted-2025-08-12-16-28-44-623-apscheduler-executors-default-INFO-Job-AzkarBot-schedule-prayer-notif-1755016155295_1755016155295.txt  Pasted-2025-08-12-16-58-26-544-apscheduler-scheduler-INFO-Removed-job-prayer-notification-Fajr-2025-0-1755018194850_1755018194850.txt
audios/: 20250812_171323.mp3.info  20250812_171325.mp3.info  20250812_172342.mp3.info  20250812_172343.mp3.info
data/content/: .gitkeep  azkar.txt
data/groups/: .gitkeep
evening/: placeholder.txt
morning/: placeholder.txt
prayers/: placeholder.txt
random/: 20250812_170114.jpg.info  20250812_170841.jpg.info  20250812_170842.jpg.info  placeholder.txt
scripts/: .gitkeep
src/azkar_bot/: __init__.py
src/azkar_bot/core/: __init__.py  config.py
src/azkar_bot/handlers/: __init__.py  admin.py
src/azkar_bot/models/: __init__.py  content.py  group.py
src/azkar_bot/services/: __init__.py  content_manager.py  file_manager.py  group_manager.py
src/azkar_bot/utils/: __init__.py  constants.py  helpers.py  logger.py
tests/: __init__.py
voices/: 20250812_165943.ogg.info  20250812_170936.ogg.info  20250812_170938.ogg.info  20250812_180913.ogg.info  20250812_181303.ogg.info
